samples/_failures_safe/1761622071_717f2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b29b0e7c.c: In function ‘main’:
./samples/SAFE/__tmp_b29b0e7c.c:152:17: error: expected expression at end of input
  152 |                 } else if (status ==
      |                 ^
./samples/SAFE/__tmp_b29b0e7c.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b29b0e7c.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b29b0e7c.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b29b0e7c.c:152:17: error: expected declaration or statement at end of input
